[gd_scene load_steps=3 format=1]

[ext_resource path="res://addons/Ross's Project Timer/R_timer_widget.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]

resource/name = "paused"
length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visibility/opacity")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.8, 2.3 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 0.5, 0.1, 0.1 ] }

[node name="Control" type="Button"]

rect/min_size = Vector2( 94, 28 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 94.0
margin/bottom = 28.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 5.0
margin/right = 87.0
margin/bottom = -9.0
text = "Initializing..."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/paused = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Menu" type="PopupMenu" parent="."]

visibility/visible = false
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = -4.0
margin/right = 202.0
margin/bottom = -139.0
popup/exclusive = false
items = [  ]

[node name="GridBox" type="GridContainer" parent="Menu"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 8.0
margin/right = 8.0
margin/bottom = 8.0
custom_constants/vseparation = 0
columns = 1

[node name="Pause-Resume Button" type="ToolButton" parent="Menu/GridBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 185.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Pause"
flat = false
align = 0

[node name="Reset Button" type="ToolButton" parent="Menu/GridBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 22.0
margin/right = 185.0
margin/bottom = 44.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reset Time"
flat = false
align = 0

[node name="Add Time Button" type="ToolButton" parent="Menu/GridBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 44.0
margin/right = 185.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Add Time"
flat = true
align = 0

[node name="Time SpinBox" type="SpinBox" parent="Menu/GridBox/Add Time Button"]

anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 94.0
margin/top = 12.0
margin/right = 4.0
margin/bottom = -12.0
range/min = -999999.0
range/max = 999999.0
range/step = 1.0
range/page = 0.0
range/value = 60.0
range/exp_edit = true
range/rounded = false
editable = true
prefix = ""
suffix = "min."

[node name="Control" type="Control" parent="Menu/GridBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 185.0
margin/bottom = 80.0

[node name="HSeparator" type="HSeparator" parent="Menu/GridBox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 80.0
margin/right = 185.0
margin/bottom = 97.0

[node name="Close Button" type="ToolButton" parent="Menu/GridBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 97.0
margin/right = 185.0
margin/bottom = 119.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Close Menu"
flat = false
align = 0

[connection signal="pressed" from="Menu/GridBox/Pause-Resume Button" to="." method="PauseResume_Button_pressed"]

[connection signal="pressed" from="Menu/GridBox/Reset Button" to="." method="Reset_Button_pressed"]

[connection signal="pressed" from="Menu/GridBox/Add Time Button" to="." method="Add_Time_Button_pressed"]

[connection signal="pressed" from="Menu/GridBox/Close Button" to="." method="Close_Button_pressed"]


